<resources>
    <string name="app_name">SingleChoice</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="which_is_the_biggest_ocean">世界上最大的海洋是？</string>
    <string name="pacific_ocean">A.太平洋</string>
    <string name="atlantic">B.大西洋</string>
    <string name="arctic_ocean">C.北冰洋</string>
    <string name="indian_ocean">D.印度洋</string>
    <string name="submit">提交</string>
</resources>
